src/app/navigation/navigation.component.scss
.is-toolbar {
	position: sticky;
	min-height: 64px;
	z-index: 5000 !important;
}
.app-title {
	z-index: 1;
	display: flex;
	align-items: center;

	cursor: pointer;

	._logo {
		margin-right: 8px;
		width: 32px;
		height: 32px;
		background-repeat: no-repeat;
		background-size: cover;
	}

	._text {
		font-weight: 700;
		font-family: 'Work Sans', sans-serif;
		font-size: 1.25em;
	}

	._dev-stage-text {
		width: 0;
		position: relative;
		color: rgb(0, 150, 255);
		font-size: 8.8px;
		bottom: -18px;
		left: -30%;
		font-family: 'Work Sans', sans-serif;
		font-weight: 600;

		&.env-offset {
			font-size: 10px;
			bottom: 14px;
			left: -72%;
			font-weight: 600;
		}
	}
}

.nav-button-list {
	height: 64px;
	display: flex;
	flex-direction: row;
	
	.nav-button {
		display: flex;
		flex-direction: row;
		justify-content: center;
		align-items: center;
		cursor: pointer;
		padding: .5em;
		height: 100%;

		&.selected {
			._select_indicator {
				height: 100%;
				align-items: flex-end;
				display: flex;
				position: absolute;
	
				:first-child {
					display: block;
					position: relative;
					bottom: 15;
					height: 1px;
					width: 100px;
					background-color: white;
				}
			}
		}

	}
}

.user-as-self {
	display: flex;
	align-items: center;
	cursor: pointer;
}

.user-as-editor {
	display: flex;
	align-items: flex-start;
	flex-direction: column;
	margin-top: .15em;

	.edited-user {
		display: flex;
		flex-direction: row;
		align-items: center;
		margin-left: .4em;

		mat-icon {
			transform: rotate(180deg); transform: scaleX(-1);
			margin-right: .25em;
		}
	}
}

.login-button {
	display: flex;
	align-items: center;
}

